web-infras/parser/tests/fixtures/esprima/expression/primary/keyword/invalid-escaped-true/output.txt
[SyntaxError]: keyword can not have any escap unicode (1,1)
1|\u0074rue
 |^
